Fix invalid overflow

--- a/src/app/core/components/add-game/add-game.component.scss
+++ b/src/app/core/components/add-game/add-game.component.scss
@@ -42,7 +42,7 @@
     z-index: -1;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
-    overflow: scroll;
+    overflow: auto;
     text-align: left;
     flex-grow: 1;
     flex-direction: row;
